--- a/ecommerce-product-page-main/index.css
+++ b/ecommerce-product-page-main/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Montserrat:ital,wght@0,200;0,400;1,300&family=Outfit:wght@300;400;600&family=Red+Hat+Display:wght@900&display=swap');
 
+
 *{ margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -22,9 +23,13 @@ body{
     padding: 1rem 60px 0px 60px
 }
 
+.icon-menu{
+    display: none;
+}
+
 .header{
     border-bottom: 1px solid var(--Grayish-blue);
-    height: 3rem;
+    /* height: 3rem; */
 }
 
 .navbar{
@@ -131,31 +136,40 @@ height: 72%;
 
 .box{
     height: 100px;
-    width: 200px;
+    width: 350px;
     margin-top: 30px;
-    display: flex;
+    display: inline;
 }
 
 .barré{
-    color: var(--Grayish-blue);
-    text-decoration: line-through;
+    color: var(--Orange);
+    margin-left: 10px;
+    background-color: var(--Pale-orange);
+    height: 20px;
+    border-radius: 4px;
+
+
+}
+
+.box-partie1{
+    width: 50%;
+    display: flex;
+    justify-content:space-between;
+    width: 40%;
 }
 
 .prix{
     margin-left: 10px;
-}
-.barré{
-    margin-left: 10px;
+
 }
 
+
 .pourcentage{
-    margin-left: 50px;
-    margin-top: 4px;
-    color: var(--Orange);
-    background-color: var(--Pale-orange);
-    height: 20px;
-    width: 30px;
-    border-radius: 4px;
+    color: var(--Grayish-blue);
+    margin-left: 10px;
+    text-decoration: line-through;
+    
+
 
 }
 
@@ -192,7 +206,117 @@ height: 72%;
     background-color: var(--Light-grayish-blue);
     border-radius: 10px;
     height: 50px;
-    width: 180px;
-    margin-right: 15px;
+    width: 200px;
     border: var(--Light-grayish-blue);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
+
+
+h3{
+    color: black;
+}
+
+
+
+@media  only screen and (max-width : 375px) {
+    .nav-links{
+        display: none;
+    }
+    .header{
+        border : none;
+        padding : 0px 1.5rem;
+    }
+
+    .icon-menu{
+        display: block;
+    }
+    .logo{
+        display: flex;
+    }
+    .icon-container{
+        display: flex;
+    }
+
+    body{
+        padding: 1rem 0px 0px 0px
+    }
+
+    .logo-menu{
+        width: 10%;
+        padding-top: 0.3rem;
+    }
+    .avatar {
+        width: 20px;
+        height: 20px;
+        margin-left: 1rem;
+        margin-bottom: 0px; 
+
+    }
+
+    .main{
+        flex-direction: column;
+    }
+    .bas{
+        display: none;
+    }
+
+    .gauche{
+        width: initial;
+    }
+
+    .haut img{
+        width: 100%;
+    }
+
+    .imagemain {
+        height: initial; 
+        margin-left: 0px; 
+        border-radius: 0px; 
+        margin-top: 0px;
+    }
+
+    .droite{
+ 
+        width: 100%;
+        margin-left: 20px;
+    }
+
+
+.bouton{
+    margin-left: 0px;
+    width: 100%;
+}
+
+.sneaker{
+    margin-top: 50px;
+}
+
+.compteur{
+    margin-bottom: 50px;
+    width: 100%;
+}
+.cart{
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+.derniere{
+    margin-bottom: 50px;
+    margin-top: 20px;
+    display: block;
+}
+
+.box{
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.description{
+    text-align:start;
+}
+
+}
+
